<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:measureWithLargestChild="false">
        <Button
            style="@style/Base.Widget.AppCompat.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/paginator_action_label_first"
            android:id="@+id/paginator_action_first"
            android:background="@color/cardview_light_background" />

        <Button
            style="@style/Base.Widget.AppCompat.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/paginator_action_label_previous"
            android:id="@+id/paginator_action_prev"
            android:background="@color/cardview_light_background" />

        <TextView
            style="?android:attr/textAppearanceButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:layout_marginStart="@dimen/margin_tiny"
            android:text="@string/paginator_page_label_prev"
            android:id="@+id/paginator_text_prev_page_num"
            android:gravity="center_horizontal" />


        <TextView
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/margin_small"
            android:text="@string/paginator_page_label_current"
            android:id="@+id/paginator_text_current_page_num"
            android:gravity="center_horizontal" />


        <TextView
            style="?android:attr/textAppearanceButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_tiny"
            android:layout_marginEnd="@dimen/margin_tiny"
            android:text="@string/paginator_page_label_next"
            android:id="@+id/paginator_text_next_page_num"
            android:gravity="center_horizontal" />


        <Button
            style="@style/Base.Widget.AppCompat.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/paginator_action_label_next"
            android:id="@+id/paginator_action_next"
            android:background="@color/cardview_light_background" />


</LinearLayout>
</android.support.v7.widget.CardView>