<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="4dp">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <!--Header-->

        <!--Expand button upper left corner-->
        <ImageButton
            android:id="@+id/post2_action_overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_more_horiz_black_24dp"
            android:background="@color/cardview_light_background"
            />

        <!--Timestamp upper right corner-->
        <TextView
            android:id="@+id/post2_timestamp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_example_timestamp_location"
            android:textSize="14sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/secondary_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:padding="8dp"/>

        <!--Inner content-->
        <!--post2 text-->
        <TextView
            android:id="@+id/post2_content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/post_example_text"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:autoLink="web"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/post2_timestamp_text"/>


        <!--A/D/N STATS -->
        <LinearLayout
            android:id="@+id/post2_adn_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/post2_content_text"
            android:padding="8dp"
            android:background="@color/md_teal_100">

            <!--2 agree -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post2_footer_num_agrees"
                android:text="@string/post_example_num_agrees"
                android:textColor="@color/md_green_600"
                android:gravity="center_vertical"
                />

            <!--2 up arrows (eventually) -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post2_footer_agree_icon"
                android:src="@drawable/agree"
                android:padding="4dp"/>


            <!--3 disagree -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post2_footer_num_disagrees"
                android:text="@string/post_example_num_disagrees"
                android:textColor="@color/md_red_600"
                android:gravity="center_vertical"/>

            <!--3 down arrows (eventually)-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post2_footer_disagree_icon"
                android:src="@drawable/disagree"
                android:gravity="center_vertical"/>

            <!--5 newsworthy icons (eventually) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post2_footer_num_newsworthies"
                android:text="@string/post_example_num_newsworthies"
                android:textColor="@color/secondary_text"
                android:gravity="center_vertical"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post2_footer_newsworthy_icon"
                android:src="@drawable/newsworthy"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <!--Reply count in or around reply action button (eventually) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post2_num_replies"
            android:text="@string/post_example_num_newsworthies"
            android:layout_below="@+id/post2_content_text"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/accent"
            android:gravity="center_vertical"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post2_footer_action_reply"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_chat_bubble_outline_black_24dp"
            android:background="@color/cardview_light_background"
            android:layout_below="@+id/post2_content_text"
            android:layout_toLeftOf="@+id/post2_num_replies"
            android:layout_toStartOf="@+id/post2_num_replies"
            android:layout_alignWithParentIfMissing="true"
            />

    </RelativeLayout>
</android.support.v7.widget.CardView>